; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_printdlg.c_set_margin_groupbox_title.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_printdlg.c_set_margin_groupbox_title.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COMDLG32_hInstance = common dso_local global i32 0, align 4
@PD32_MARGINS_IN_MILLIMETERS = common dso_local global i32 0, align 4
@PD32_MARGINS_IN_INCHES = common dso_local global i32 0, align 4
@grp4 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @set_margin_groupbox_title to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_margin_groupbox_title(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca [256 x i32], align 16
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* @COMDLG32_hInstance, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @is_metric(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @PD32_MARGINS_IN_MILLIMETERS, align 4
  br label %14

12:                                               ; preds = %2
  %13 = load i32, i32* @PD32_MARGINS_IN_INCHES, align 4
  br label %14

14:                                               ; preds = %12, %10
  %15 = phi i32 [ %11, %10 ], [ %13, %12 ]
  %16 = getelementptr inbounds [256 x i32], [256 x i32]* %5, i64 0, i64 0
  %17 = getelementptr inbounds [256 x i32], [256 x i32]* %5, i64 0, i64 0
  %18 = call i32 @ARRAY_SIZE(i32* %17)
  %19 = call i64 @LoadStringW(i32 %6, i32 %15, i32* %16, i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %26

21:                                               ; preds = %14
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* @grp4, align 4
  %24 = getelementptr inbounds [256 x i32], [256 x i32]* %5, i64 0, i64 0
  %25 = call i32 @SetDlgItemTextW(i32 %22, i32 %23, i32* %24)
  br label %26

26:                                               ; preds = %21, %14
  ret void
}

declare dso_local i64 @LoadStringW(i32, i32, i32*, i32) #1

declare dso_local i64 @is_metric(i32*) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @SetDlgItemTextW(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
